--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,36 @@
-version: '3.9'
+version: '3'
 
 services:
   redis:
-    image: redis:latest
+    image: 'redis:5-alpine'
     command: redis-server
     ports:
-      - "6379:6379"
+      - '6379:6379'
+    volumes:
+      - 'redis:/data'
+
   sidekiq:
     depends_on:
-      - redis
+      - 'redis'
     build: .
+    command: bundle exec sidekiq
+    volumes:
+      - '.:/project'
     env_file:
-      - .env
+      - '.env'
+
   web:
     depends_on:
-      - sidekiq
+      - 'db'
+      - 'redis'
     build: .
-    volumes:
-      - .:/app
+    command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
     ports:
-      - "3000:3000"
-    env_file:
-      - .env
+      - '3000:3000'
+    volumes:
+      - '.:/project'
+    environment:
+      - REDIS_URL_SIDEKIQ=redis://redis:6379/1
+
+volumes:
+  redis:
